Fix post feed module spacing

--- a/src/scss/_module-post-feed.scss
+++ b/src/scss/_module-post-feed.scss
@@ -1,3 +1,7 @@
+.module.post-feed {
+    margin-bottom: 0;
+}
+
 .post-feed h2 {
     @include border-bottom-salmon-partial;
 }
